<resources>
    <string name="app_name">中油西营VIP</string>
    <string name="homeTiele">中油西营VIP</string>
    <string name="joinDate">入会时间</string>
    <string name="joinDate2">入会时间：</string>
    <string name="joinDateLength2">入会时长：</string>
    <string name="integral">积分</string>
    <string name="addIntegral">添加积分</string>
    <string name="integral2">积\u3000分：</string>
    <string name="integralTotal">总积分</string>
    <string name="integralTotal2">总积分：</string>
    <string name="sava">保存</string>
    <string name="cardNumber2">卡\u3000号：</string>
    <string name="name">姓名</string>
    <string name="name2">姓\u3000名：</string>
    <string name="carNumber2">车牌号：</string>
    <string name="phoneNumber2">电\u3000话：</string>
    <string name="date">日期</string>
    <string name="date2">日\u3000期：</string>
    <string name="lNumber">加油量</string>
    <string name="lNumber2">加油量：</string>
    <string name="lNumberTotal2">总油量：</string>
    <string name="detail">详细信息</string>
    <string name="basisMsg">基本信息</string>
    <string name="integralMsg">积分信息</string>
    <string name="addMember">添加会员</string>
    <string name="theImport">导入</string>
    <string name="theExport">导出</string>
    <string name="lNumberHint">单位（L）</string>
    <string name="delete">删除</string>
    <string name="deleteMem">删除会员</string>

    <string name="date_picker_title">选择日期</string>

    <string name="hit">提示</string>
    <string name="sureDele">确认删除吗？</string>
    <string name="sOk">确认</string>
    <string name="sCancel">取消</string>
    <string name="cancel">取消</string>
    <string name="searchHint">可根据\n卡号、名字、车牌号、电话号码\n查询会员</string>
    <string name="rules">说明：\n\u3000\u3000积分是根据加油量自动获得，每加1L油可获得1积分</string>
    <string name="err">数据有误</string>
    <string name="loadingMore">加载中...</string>
    <string name="noMore">没有更多数据了</string>
    <string name="loadingDialogMsg">加载中...</string>
</resources>
