<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.skw.integralsys.activity.MainActivity">

    <RelativeLayout style="@style/titleBar">

        <ImageView
            android:id="@+id/back"
            style="@style/back" />

        <TextView
            style="@style/title"
            android:text="@string/addMember" />

        <TextView
            android:id="@+id/save"
            style="@style/rightMenu"
            android:text="@string/sava" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp12"
        android:paddingLeft="@dimen/dp12"
        android:paddingRight="@dimen/dp12"
        android:text="@string/rules"
        android:textColor="@color/mainColor"
        android:textSize="@dimen/sp16" />


    <LinearLayout
        style="@style/addMemItemLayout"
        android:layout_marginTop="@dimen/dp12">

        <TextView
            style="@style/addMemItemTitle"
            android:text="@string/date2" />

        <TextView
            android:id="@+id/LNumberDate"
            style="@style/addMemItemValue" />
    </LinearLayout>

    <LinearLayout style="@style/addMemItemLayout">

        <TextView
            style="@style/addMemItemTitle"
            android:text="@string/lNumber2" />

        <EditText
            android:id="@+id/LNumber"
            style="@style/addMemItemValue"
            android:digits="1234567890."
            android:hint="@string/lNumberHint"
            android:inputType="number"
            android:textColorHint="@color/subTitleColor" />
    </LinearLayout>

    <LinearLayout style="@style/addMemItemLayout">

        <TextView
            style="@style/addMemItemTitle"
            android:text="@string/integral2" />

        <TextView
            android:id="@+id/integralNumber"
            style="@style/addMemItemValue" />
    </LinearLayout>


</LinearLayout>
