<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/addMember"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:gravity="center"
        android:text="@string/addMember" />

    <TextView
        android:id="@+id/theImport"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:gravity="center"
        android:text="@string/theImport" />

    <TextView
        android:id="@+id/theExport"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:gravity="center"
        android:text="@string/theExport" />

</LinearLayout>