<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/item_mem_tab"
            android:text="@string/date" />

        <TextView
            android:layout_width="@dimen/dp1"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dp4"
            android:layout_marginTop="@dimen/dp4"
            android:background="@color/lineColor" />

        <TextView
            style="@style/item_mem_tab"
            android:text="@string/lNumber" />

        <TextView
            android:layout_width="@dimen/dp1"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dp4"
            android:layout_marginTop="@dimen/dp4"
            android:background="@color/lineColor" />

        <TextView
            style="@style/item_mem_tab"
            android:text="@string/integral" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@color/lineColor" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvIntegralList"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>