<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.skw.integralsys.activity.MainActivity">

    <RelativeLayout style="@style/titleBar">

        <ImageView
            android:id="@+id/back"
            style="@style/back" />

        <TextView
            style="@style/title"
            android:text="@string/addMember" />

        <TextView
            android:id="@+id/save"
            style="@style/rightMenu"
            android:text="@string/sava" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp60"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp12"
        android:paddingRight="@dimen/dp12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/cardNumber2"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/sp16" />

        <EditText
            android:id="@+id/cardId"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp12"
            android:background="@drawable/selector_input_edit"
            android:gravity="center_vertical"
            android:inputType="number"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/sp16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp60"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp12"
        android:paddingRight="@dimen/dp12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/name2"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/sp16" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp12"
            android:background="@drawable/selector_input_edit"
            android:gravity="center_vertical"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/sp16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp60"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp12"
        android:paddingRight="@dimen/dp12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/carNumber2"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/sp16" />

        <EditText
            android:id="@+id/carNumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp12"
            android:background="@drawable/selector_input_edit"
            android:gravity="center_vertical"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/sp16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp60"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp12"
        android:paddingRight="@dimen/dp12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/phoneNumber2"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/sp16" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp12"
            android:background="@drawable/selector_input_edit"
            android:gravity="center_vertical"
            android:inputType="phone"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/sp16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp60"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp12"
        android:paddingRight="@dimen/dp12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/lNumber2"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/sp16" />

        <EditText
            android:id="@+id/LNumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp12"
            android:background="@drawable/selector_input_edit"
            android:digits="1234567890."
            android:gravity="center_vertical"
            android:hint="@string/lNumberHint"
            android:inputType="number"
            android:textColor="@color/titleColor"
            android:textColorHint="@color/subTitleColor"
            android:textSize="@dimen/sp16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp60"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp12"
        android:paddingRight="@dimen/dp12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/date2"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/sp16" />

        <TextView
            android:id="@+id/createTime"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp12"
            android:background="@drawable/selector_input_edit"
            android:gravity="center_vertical"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/sp16" />
    </LinearLayout>


</LinearLayout>
