<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp12"
        android:paddingRight="@dimen/dp12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/cardNumber2"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/sp16" />

        <EditText
            android:id="@+id/cardId"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp12"
            android:background="@drawable/selector_input_edit"
            android:gravity="center_vertical"
            android:inputType="number"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/sp16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp12"
        android:paddingRight="@dimen/dp12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/name2"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/sp16" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp12"
            android:background="@drawable/selector_input_edit"
            android:gravity="center_vertical"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/sp16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp12"
        android:paddingRight="@dimen/dp12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/carNumber2"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/sp16" />

        <EditText
            android:id="@+id/carNumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp12"
            android:background="@drawable/selector_input_edit"
            android:gravity="center_vertical"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/sp16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp12"
        android:paddingRight="@dimen/dp12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/phoneNumber2"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/sp16" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp12"
            android:background="@drawable/selector_input_edit"
            android:gravity="center_vertical"
            android:inputType="phone"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/sp16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp12"
        android:paddingRight="@dimen/dp12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/joinDate2"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/sp16" />

        <TextView
            android:id="@+id/joinDate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp12"
            android:background="@drawable/selector_input_edit"
            android:gravity="center_vertical"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/sp16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp12"
        android:paddingRight="@dimen/dp12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/joinDateLength2"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/sp16" />

        <TextView
            android:id="@+id/joinDateLength"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp12"
            android:background="@drawable/input_normal"
            android:gravity="center_vertical"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/sp16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp12"
        android:paddingRight="@dimen/dp12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/lNumberTotal2"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/sp16" />

        <TextView
            android:id="@+id/LNumberTotal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp12"
            android:background="@drawable/input_normal"
            android:gravity="center_vertical"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/sp16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp12"
        android:paddingRight="@dimen/dp12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/integralTotal2"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/sp16" />

        <TextView
            android:id="@+id/integralTotal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp12"
            android:background="@drawable/input_normal"
            android:gravity="center_vertical"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/sp16" />
    </LinearLayout>


</LinearLayout>