<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout style="@style/titleBar">

        <ImageView
            android:id="@+id/back"
            style="@style/back" />

        <TextView
            style="@style/title"
            android:text="@string/detail" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/basisMsg"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/basisMsg"
            android:textColor="@drawable/selector_mem_detail_tab_textcolor"
            android:textSize="@dimen/sp15" />

        <TextView
            android:layout_width="@dimen/dp1"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dp4"
            android:layout_marginTop="@dimen/dp4"
            android:background="@color/lineColor" />

        <TextView
            android:id="@+id/integralMsg"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/integralMsg"
            android:textColor="@drawable/selector_mem_detail_tab_textcolor"
            android:textSize="@dimen/sp15" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/indexLine"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp12"
            android:layout_marginRight="@dimen/dp12"
            android:background="@color/mainColorDark" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@color/lineColor" />

    <android.support.v4.view.ViewPager
        android:id="@+id/vpMemberDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v4.view.ViewPager>

</LinearLayout>