<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:orientation="vertical">

    <RelativeLayout style="@style/titleBar">

        <ImageView
            android:id="@+id/back"
            style="@style/back" />

        <TextView
            style="@style/title"
            android:text="@string/integral" />

        <TextView
            android:id="@+id/delete"
            style="@style/rightMenu"
            android:text="@string/delete" />

    </RelativeLayout>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp12"
        android:layout_marginRight="@dimen/dp12"
        android:layout_marginTop="@dimen/dp12"
        android:elevation="@dimen/dp100"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        card_view:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50"
                android:paddingLeft="@dimen/dp12"
                android:paddingRight="@dimen/dp12">

                <TextView
                    android:id="@+id/lDateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/date2"
                    android:textColor="@color/titleColor"
                    android:textSize="@dimen/sp16" />

                <TextView
                    android:id="@+id/lDate"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp40"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp12"
                    android:layout_toRightOf="@id/lDateText"
                    android:gravity="center_vertical"
                    android:textColor="@color/titleColor"
                    android:textSize="@dimen/sp16" />

                <ImageView
                    android:layout_width="@dimen/dp20"
                    android:layout_height="@dimen/dp20"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp12"
                    android:background="@mipmap/edit" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50"
                android:paddingLeft="@dimen/dp12"
                android:paddingRight="@dimen/dp12">

                <TextView
                    android:id="@+id/lNumberText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/lNumber2"
                    android:textColor="@color/titleColor"
                    android:textSize="@dimen/sp16" />

                <TextView
                    android:id="@+id/lNumber"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp40"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp12"
                    android:layout_toRightOf="@id/lNumberText"
                    android:gravity="center_vertical"
                    android:textColor="@color/titleColor"
                    android:textSize="@dimen/sp16" />

                <ImageView
                    android:layout_width="@dimen/dp20"
                    android:layout_height="@dimen/dp20"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp12"
                    android:background="@mipmap/edit" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50"
                android:paddingLeft="@dimen/dp12"
                android:paddingRight="@dimen/dp12">

                <TextView
                    android:id="@+id/integralNumberText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/integral2"
                    android:textColor="@color/titleColor"
                    android:textSize="@dimen/sp16" />

                <TextView
                    android:id="@+id/integralNumber"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp40"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp12"
                    android:layout_toRightOf="@id/integralNumberText"
                    android:gravity="center_vertical"
                    android:textColor="@color/titleColor"
                    android:textSize="@dimen/sp16" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>